[locations] english text in en template

--- a/modules-available/locations/lang/en/template-tags.json
+++ b/modules-available/locations/lang/en/template-tags.json
@@ -10,7 +10,7 @@
     "lang_editRoomplan": "edit roomplan",
     "lang_endAddress": "End address",
     "lang_listOfSubnets": "List of subnets",
-    "lang_location": "Ort",
+    "lang_location": "Location",
     "lang_locationInfo": "Location details",
     "lang_locationName": "Name",
     "lang_locationOtherOverlap": "Warning! These locations have overlapping address ranges",
