[sessions] english text in en template

--- a/modules-available/session/lang/en/messages.json
+++ b/modules-available/session/lang/en/messages.json
@@ -3,5 +3,5 @@
     "pass-too-short": "Password too short",
     "password-changed": "Password successfully changed",
     "password-unchanged": "Password unchanged",
-    "wrong-password": "Wrong passwort"
+    "wrong-password": "Wrong password"
 }
