[statistics] Update translations

--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -37,6 +37,7 @@
     "lang_machineOccupied": "Der Rechner ist eingeschaltet und wird benutzt",
     "lang_machineOccupiedBy": "In Verwendung durch",
     "lang_machineOff": "Der Rechner ist ausgeschaltet, oder hat kein bwLehrpool gebootet",
+    "lang_machineStandby": "Im Standby",
     "lang_machineSummary": "Zusammenfassung",
     "lang_maximumAbbrev": "Max.",
     "lang_memoryStats": "Arbeitsspeicher",
@@ -64,6 +65,8 @@
     "lang_ramSlots": "Speicher-Slots",
     "lang_realCores": "Kerne",
     "lang_reallocatedSectors": "Defekte Sektoren",
+    "lang_runMode": "Betriebsmodus",
+    "lang_runmodeMachines": "Mit besonderem Betriebsmodus",
     "lang_screens": "Bildschirme",
     "lang_serialNo": "Serien-Nr",
     "lang_showList": "Liste",
