--- a/modules-available/statistics/lang/en/template-tags.json
+++ b/modules-available/statistics/lang/en/template-tags.json
@@ -37,6 +37,7 @@
     "lang_machineOccupied": "Machine is powered on and in use",
     "lang_machineOccupiedBy": "In use by",
     "lang_machineOff": "Machine is powered down, or is not running bwLehrpool",
+    "lang_machineStandby": "In standby mode",
     "lang_machineSummary": "Summary",
     "lang_maximumAbbrev": "max.",
     "lang_memoryStats": "Memory",
@@ -64,6 +65,8 @@
     "lang_ramSlots": "Memory slots",
     "lang_realCores": "Cores",
     "lang_reallocatedSectors": "Bad sectors",
+    "lang_runMode": "Mode of operation",
+    "lang_runmodeMachines": "With special mode of operation",
     "lang_screens": "Screens",
     "lang_serialNo": "Serial no",
     "lang_showList": "Show list",
