--- a/modules-available/statistics/lang/de/messages.json
+++ b/modules-available/statistics/lang/de/messages.json
@@ -1,6 +1,6 @@
 {
-    "invalid-filter": "Ung\u00fcltiger Filter",
     "invalid-filter-argument": "Das Argument {{1}} ist nicht g\u00fcltig f\u00fcr den Filter {{0}}",
     "invalid-filter-key": "{{0}} ist kein g\u00fcltiges Filterkriterium",
-    "notes-saved": "Anmerkungen gespeichert"
+    "notes-saved": "Anmerkungen gespeichert",
+    "unknown-machine": "Unbekannte Rechner-ID {{0}}"
 }
