--- a/modules-available/dnbd3/lang/en/template-tags.json
+++ b/modules-available/dnbd3/lang/en/template-tags.json
@@ -15,6 +15,7 @@
     "lang_count": "Count",
     "lang_disabled": "Disabled",
     "lang_diskFree": "Free space",
+    "lang_dnbd3IntroText": "DNBD3 is a distributed storage system for the special requirements of bwLehrpool. To see speed improvements over NFS\/CIFS you need at least one proxy (besides the satellite server). If you have locations with slow network connection it's advisable to have one proxy per location. Please mind the information in the wiki.",
     "lang_dnbd3Management": "DNBD3 management",
     "lang_dnbd3Status": "DNBD3 status",
     "lang_editProxyHeading": "Edit proxy settings",
@@ -38,6 +39,7 @@
     "lang_managedServerHelp": "Automatically configured DNBD3-Proxies will boot like normal bwLehrpool-Clients over PXE and the satellite server. If a client is configured as proxy it will boot with a different configuration and acts exclusively as proxy. The client can therefore not be used as a normal working station.\r\nThe advantage is that you don't need to install or configure anything else. The client will reboot every week to get possible updates ot the minilinux.\r\nIf you want to use this feature, please create a partition with ID 45 on the local hard disk of the proxy server. In contrast to the ID 44 partition which is formated after every reboot, this partition is persistent. As a rule of thumb the partition should be as big as possible. If there is no space left the proxy will delete the VM which hasn't be used for the longest time. More information in the wiki.",
     "lang_numFails": "Errors",
     "lang_proxyConfig": "Configuration",
+    "lang_proxyLocationText": "Here you can restrict the usage of this proxy to certain locations. This can be useful if the usage is only reasonable from some locations. That may be because of the network infrastructure.",
     "lang_proxyServerTHead": "Server\/Proxy",
     "lang_reboot": "Reboot",
     "lang_rebootProxyHeading": "Reboot proxy",
