--- a/modules-available/sysconfig/lang/en/module.json
+++ b/modules-available/sysconfig/lang/en/module.json
@@ -1,4 +1,5 @@
 {
+    "config-module": "Config module",
     "lang_clientSshConfig": "SSH configuration",
     "lang_configurationCompilation": "Compile configuration",
     "lang_contentOf": "Content of",
