--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -26,6 +26,7 @@
     "lang_ecoTooltip": "Symbolic based pc state pictures are used instead of the colour based ones",
     "lang_editDefaultPanelHints": "Here you can define panel properties for e.g. a digital door sign. To show opening times for a room you need to define corresponding times in the settings.\r\nIf you want to show calendar events you have to define a functioning backend first and link it to corresponding rooms.",
     "lang_editPanel": "Edit panel",
+    "lang_editSummaryPanelHints": "Here you can define a summary panel which shows a overview of clients in your locations.",
     "lang_editUrlPanelHints": "Here you can define which URL is opened by the panel. This enables you to show news about your university or any other website.",
     "lang_entryName": "Name",
     "lang_error": "Error",
@@ -41,6 +42,7 @@
     "lang_locationSettings": "Settings",
     "lang_locations": "Locations",
     "lang_locationsTable": "Rooms \/ Locations",
+    "lang_locationsTableHints": "Here you can define opening times for your locations and link the location ID to a configured backend (e.g. HISinOne) to show calendar events.",
     "lang_longFri": "Friday",
     "lang_longMon": "Monday",
     "lang_longSat": "Saturday",
@@ -64,7 +66,10 @@
     "lang_panelType": "Type",
     "lang_panels": "Panels",
     "lang_panelsTable": "Manage panels",
+    "lang_panelsTableHints": "This shows you all panels which can be shown anywhere by a browser of your choice, e.g. for a digital door sign.",
     "lang_pleaseSelect": "Please select...",
+    "lang_prettytime": "PrettyTime",
+    "lang_prettytimeTooltip": "Use a different display format for the time",
     "lang_recursiveServerSet": "Also set for all child locations",
     "lang_recursiveSetTooltip": "If checked, all direct and indirect child locations will be configured to use the backend server selected above",
     "lang_remoteSchedule": "Time table retrieval",
@@ -85,6 +90,7 @@
     "lang_sec": "sec",
     "lang_server": "Server",
     "lang_serverTable": "Manage backend servers",
+    "lang_serverTableHints": "List of all configured server backends. Those are required if you want to show calendar events for your locations.",
     "lang_serverTooltip": "Defines from which server the room queries the calendar data",
     "lang_serverType": "Type",
     "lang_shortFri": "Fri",
