--- a/modules-available/statistics/lang/en/messages.json
+++ b/modules-available/statistics/lang/en/messages.json
@@ -1,4 +1,5 @@
 {
+    "deleted-n-machines": "Deleted {{0}} clients",
     "invalid-filter-argument": "{{1}} is not a vald argument for filter {{0}}",
     "invalid-filter-key": "{{0}} is not a valid filter",
     "notes-saved": "Notes have been saved",
