--- a/modules-available/systemstatus/lang/de/template-tags.json
+++ b/modules-available/systemstatus/lang/de/template-tags.json
@@ -1,4 +1,5 @@
 {
+    "lang_OK": "OK",
     "lang_addressConfiguration": "Adresskonfiguration",
     "lang_areYouSureNoUndo": "Sind Sie sicher? Diese Aktion kann nicht r\u00fcckg\u00e4ngig gemacht werden.",
     "lang_attention": "Achtung!",
@@ -7,10 +8,10 @@
     "lang_cpuLoad": "CPU-Last",
     "lang_dmsdUnreachable": "dmsd nicht erreichbar",
     "lang_downloads": "Downloads",
+    "lang_failure": "Fehler",
     "lang_foundStore": "Vorgefunden:",
     "lang_free": "Frei",
     "lang_goToStoreConf": "Zur VM-Store-Konfiguration wechseln",
-    "lang_iAmSure": "Ja, ich bin sicher",
     "lang_logicCPUs": "Logische CPUs",
     "lang_maintenance": "Maintenance",
     "lang_moduleHeading": "System-Status",
@@ -30,6 +31,7 @@
     "lang_systemPartition": "Systempartition",
     "lang_systemStoreError": "Fehler beim Ermitteln des verf\u00fcgbaren Systemspeichers",
     "lang_total": "Gesamt",
+    "lang_unknownState": "Unbekannter Status",
     "lang_updatedPackages": "Ausstehende Updates",
     "lang_uploads": "Uploads",
     "lang_uptimeOS": "OS Uptime",
