--- a/modules-available/systemstatus/lang/en/template-tags.json
+++ b/modules-available/systemstatus/lang/en/template-tags.json
@@ -1,4 +1,5 @@
 {
+    "lang_OK": "OK",
     "lang_addressConfiguration": "Address Configuration",
     "lang_areYouSureNoUndo": "Are you sure? This cannot be undone!",
     "lang_attention": "Attention!",
@@ -7,10 +8,10 @@
     "lang_cpuLoad": "CPU Load",
     "lang_dmsdUnreachable": "dmsd not reachable",
     "lang_downloads": "Downloads",
+    "lang_failure": "Failure",
     "lang_foundStore": "Found:",
     "lang_free": "Free",
     "lang_goToStoreConf": "Go to VM store configuration",
-    "lang_iAmSure": "Yes, I am sure",
     "lang_logicCPUs": "Logic CPUs",
     "lang_maintenance": "Maintenance",
     "lang_moduleHeading": "System Status",
@@ -30,6 +31,7 @@
     "lang_systemPartition": "System Partition",
     "lang_systemStoreError": "Error querying available system storage",
     "lang_total": "Total",
+    "lang_unknownState": "Unknown status",
     "lang_updatedPackages": "Pending updates",
     "lang_uploads": "Uploads",
     "lang_uptimeOS": "OS Uptime",
