--- a/modules-available/sysconfig/lang/en/template-tags.json
+++ b/modules-available/sysconfig/lang/en/template-tags.json
@@ -33,6 +33,8 @@
     "lang_customCertificate": "Additional (intermediate) certificates required for certificate validation",
     "lang_customModuleInfo1": "About a custom module, it is possible to add arbitrary files to a Linux system that is booted clients. For this purpose, an archive can be uploaded using a file system structure that is extracted in this form 1:1 in the booted Linux.",
     "lang_customModuleInfo2": "Example: If the uploaded archive is the file etc\/example.conf, this file will be located as \/etc\/example.conf to a booted client.",
+    "lang_customizeAttrDesc": "Here you can override attribute names and values if your LDAP scheme doesn't adhere to the usual Unix scheme.",
+    "lang_customizeAttributes": "Customize attributes",
     "lang_deleteLong": "Delete module or configuration.",
     "lang_determiningHomeDirectory": "Trying to determine home directory attribute...",
     "lang_dnLookup": "Looking up bind dn",
@@ -52,6 +54,7 @@
     "lang_helpSystemConfiguration": "The fundamental localization of the bwLehrpool system is done through a system configuration. These include aspects such as the authentication method for users (eg Active Directory, LDAP), printer configuration, home directories, etc. A system configuration is composed of one or more configuration modules, which can be managed in the panel next to this one.",
     "lang_homeAttr": "Home attribute",
     "lang_homeAttributeExplanation": "Please select the attribute which holds the user's home directory.",
+    "lang_homeFallback": "Home fallback",
     "lang_homedirHandling": "(Home) directory handling",
     "lang_inheritFromParentLoc": "Inherit from parent location",
     "lang_ldapStarted": "The LDAP proxy has been launched",
