--- a/modules-available/sysconfig/lang/en/messages.json
+++ b/modules-available/sysconfig/lang/en/messages.json
@@ -2,7 +2,7 @@
     "config-activated": "Configuration {{0}} has been activated",
     "config-deleted": "Deleted configuration {{0}}",
     "config-invalid": "Configuration with id {{0}} does not exist",
-    "could-not-determine-binddn": "Could not determine bind dn",
+    "could-not-determine-binddn": "Could not determine bind dn ({{0}})",
     "invalid-action": "Invalid action: {{0}}",
     "missing-file": "There was no file selected!",
     "missing-title": "No title given",
