[systemstatus] Tweak design and text of reboot dialog

--- a/modules-available/systemstatus/lang/de/template-tags.json
+++ b/modules-available/systemstatus/lang/de/template-tags.json
@@ -1,7 +1,7 @@
 {
     "lang_OK": "OK",
     "lang_addressConfiguration": "Adresskonfiguration",
-    "lang_areYouSureNoUndo": "Sind Sie sicher? Diese Aktion kann nicht r\u00fcckg\u00e4ngig gemacht werden.",
+    "lang_areYouSureReboot": "Server jetzt neustarten?",
     "lang_attention": "Achtung!",
     "lang_average": "Durchschnitt",
     "lang_capacity": "Kapazit\u00e4t",
