--- a/modules-available/systemstatus/lang/en/template-tags.json
+++ b/modules-available/systemstatus/lang/en/template-tags.json
@@ -1,7 +1,7 @@
 {
     "lang_OK": "OK",
     "lang_addressConfiguration": "Address Configuration",
-    "lang_areYouSureNoUndo": "Are you sure? This cannot be undone!",
+    "lang_areYouSureReboot": "Reboot server now?",
     "lang_attention": "Attention!",
     "lang_average": "Average",
     "lang_capacity": "Capacity",
