[locationinfo] Update translations

--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -10,8 +10,6 @@
     "lang_checkConnection": "Verbindung pr\u00fcfen",
     "lang_closed": "Geschlossen",
     "lang_closingTime": "Schlie\u00dfungszeit",
-    "lang_config": "Einstellungen",
-    "lang_configupdateTooltip": "Zeit nach der die Einstellungen aktualisiert werden (in Minuten)",
     "lang_createPanel": "Panel anlegen",
     "lang_credentials": "Anmeldung",
     "lang_day": "Tag",
@@ -25,8 +23,8 @@
     "lang_ecoMode": "E-Ink Modus",
     "lang_ecoTooltip": "Anstelle der Farb-basierten PC-Status Bilder, werden Symbol-basierte PC Bilder verwendet",
     "lang_editDefaultPanelHints": "Hier k\u00f6nnen Sie ein Panel (z.B. digitales T\u00fcrschild) in Aussehen und Funktionsweise definieren. Um im Kalender \u00d6ffnungszeiten anzeigen zu k\u00f6nnen, m\u00fcssen Sie im Tab \"Raum-\/Ortsbezogene Einstellungen\" f\u00fcr den ausgew\u00e4hlten Raum entsprechend \u00d6ffnungszeiten eintragen. Damit im Kalender Veranstaltungen und andere Termine angezeigt werden k\u00f6nnen, muss ein funktionierendes Backend konfiguriert und den ausgew\u00e4hlten R\u00e4umen zugewiesen worden sein.",
-    "lang_editSummaryPanelHints": "Hier k\u00f6nnen Sie ein Summary-Panel definieren. Das Panel zeigt eine Übersicht der in den R\u00e4umen enthalten PCs.",
     "lang_editPanel": "Panel bearbeiten",
+    "lang_editSummaryPanelHints": "Hier k\u00f6nnen Sie ein Summary-Panel definieren. Das Panel zeigt eine \u00dcbersicht der in den R\u00e4umen enthalten PCs.",
     "lang_editUrlPanelHints": "Hier k\u00f6nnen Sie konfigurieren, welche URL das Panel aufrufen soll. Dies erm\u00f6glicht Ihnen z.B. in Eingangsbereichen aktuelle Meldungen der Hochschule oder sonstige Webseiten anzuzeigen.",
     "lang_entryName": "Name",
     "lang_error": "Fehler",
@@ -38,6 +36,7 @@
     "lang_insecureSsl": "Unsicheres SSL",
     "lang_language": "Sprache",
     "lang_languageTooltip": "Legt die Sprache der angezeigten Oberfl\u00e4che fest",
+    "lang_lastCalendarUpdate": "Kalender Update",
     "lang_locationName": "Name",
     "lang_locationSettings": "Raum-\/Ortsbezogene Einstellungen",
     "lang_locations": "Orte",
