--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -10,8 +10,6 @@
     "lang_checkConnection": "Check connection",
     "lang_closed": "Closed",
     "lang_closingTime": "Closing time",
-    "lang_config": "Config",
-    "lang_configupdateTooltip": "Time interval the config gets updated (in minutes)",
     "lang_createPanel": "Create panel",
     "lang_credentials": "Login",
     "lang_day": "Day",
@@ -38,6 +36,7 @@
     "lang_insecureSsl": "Insecure SSL",
     "lang_language": "Language",
     "lang_languageTooltip": "The language the frontend uses",
+    "lang_lastCalendarUpdate": "Calendar update",
     "lang_locationName": "Name",
     "lang_locationSettings": "Location specific settings",
     "lang_locations": "Locations",
