--- a/modules-available/permissionmanager/lang/de/template-tags.json
+++ b/modules-available/permissionmanager/lang/de/template-tags.json
@@ -2,12 +2,11 @@
     "lang_Roles": "Rollen",
     "lang_Users": "Nutzer",
     "lang_Locations": "Räume",
-    "lang_addRole": "Rolle zuweisen",
-    "lang_removeRole": "Rolle entfernen",
+    "lang_addRole": "Rollen erteilen",
+    "lang_removeRole": "Rollen entziehen",
     "lang_newRole": "Rolle anlegen",
     "lang_Selected": "Ausgewählt",
     "lang_Edit": "Bearbeiten",
-    "lang_Remove": "Entfernen",
     "lang_Delete": "Löschen",
     "lang_removeCheck": "Sind Sie sich sicher, dass Sie diese Rolle entfernen wollen?",
     "lang_deleteCheck": "Sind Sie sich sicher, dass Sie diese Rolle löschen wollen?",
