--- a/modules-available/permissionmanager/lang/en/template-tags.json
+++ b/modules-available/permissionmanager/lang/en/template-tags.json
@@ -2,12 +2,11 @@
     "lang_Roles": "Roles",
     "lang_Users": "Users",
     "lang_Locations": "Locations",
-    "lang_addRole": "Add Role",
-    "lang_removeRole": "Remove Role",
+    "lang_addRole": "Grant Roles",
+    "lang_removeRole": "Revoke Roles",
     "lang_newRole": "New Role",
     "lang_Selected": "Selected",
     "lang_Edit": "Edit",
-    "lang_Remove": "Remove",
     "lang_Delete": "Delete",
     "lang_removeCheck": "Are you sure you want to remove this role?",
     "lang_deleteCheck": "Are you sure you want to delete this role?",
