--- a/modules-available/minilinux/lang/de/template-tags.json
+++ b/modules-available/minilinux/lang/de/template-tags.json
@@ -1,5 +1,5 @@
 {
-    "lang_actual": "Aktuell",
+    "lang_uptodate": "Aktuell",
     "lang_canUpdate1": "Mindestens eine Komponente von",
     "lang_canUpdate2": "kann aktualisiert werden. F\u00fcr einen reibungslosen Betrieb wird empfohlen, alle Komponenten auf dem aktuellen Stand zu halten.",
     "lang_configurationPackageNotFound": "Keine Konfigurationspakete gefunden!",
