--- a/modules-available/minilinux/lang/pt/template-tags.json
+++ b/modules-available/minilinux/lang/pt/template-tags.json
@@ -1,5 +1,5 @@
 {
-    "lang_actual": "Atual",
+    "lang_uptodate": "Atual",
     "lang_canUpdate1": "Pelo menos um componente de",
     "lang_canUpdate2": "pode ser atualizado. Para um bom funcionamento, recomenda-se manter todos os componentes atualizados.",
     "lang_configurationPackageNotFound": "Pacote de configura\u00e7\u00e3o n\u00e3o encontrado!",
