[vmstore] added permissions to choose internal, nfs or cifs vm storage

--- a/modules-available/vmstore/lang/en/template-tags.json
+++ b/modules-available/vmstore/lang/en/template-tags.json
@@ -3,13 +3,14 @@
     "lang_cifsHelp2": "Please provide user credentials with read\/write permissions which will be used by the server. For the clients, user credentials that allow read-only access is required. You could also enable passwordless guest login for read-only access.",
     "lang_cifsHelp3": "If you want to use DNBD3 in exclusive mode, you can leave the read only credentials empty, to prevent people from browsing the share.",
     "lang_configure": "Configure",
-    "lang_intern": "Intern",
+    "lang_internal": "Internal",
     "lang_nfsHelp1": "An NFSv4\/3-Share is required. It should be readable by all the workstations, and writable for the satellite server. An example, assuming the satellite server has IP address 1.2.3.4:",
     "lang_nfsHelp2": "Alternate configuration using all_squash. The exported directory should be owned (and be writable) by the user with uid 1234.",
     "lang_nfsHelp3": "The first line allows read\/write access for the satellite server. The second line grants read-only access for every other IP address. You could limit the second line to specific IP ranges only if desired.",
     "lang_nfsHelp4": "If using DNBD3 in exclusive mode, you can remove the second line completely, so only the satellite server has access to the NFS store.",
     "lang_noAdditionalInformation": "No additional cofiguration required",
     "lang_password": "Password",
+    "lang_path": "Path",
     "lang_readOnly": "Read-only Access",
     "lang_readWrite": "Read\/Write Access",
     "lang_username": "Username",
