[statistics] Add filters for uptime and hostname
Closes #3278

--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -68,6 +68,7 @@
     "lang_reallocatedSectors": "Defekte Sektoren",
     "lang_runMode": "Betriebsmodus",
     "lang_runmodeMachines": "Mit besonderem Betriebsmodus",
+    "lang_runtimeHours": "Laufzeit (Stunden)",
     "lang_screens": "Bildschirme",
     "lang_serialNo": "Serien-Nr",
     "lang_showList": "Liste",
