--- a/modules-available/statistics/lang/en/template-tags.json
+++ b/modules-available/statistics/lang/en/template-tags.json
@@ -68,6 +68,7 @@
     "lang_reallocatedSectors": "Bad sectors",
     "lang_runMode": "Mode of operation",
     "lang_runmodeMachines": "With special mode of operation",
+    "lang_runtimeHours": "Runtime (hours)",
     "lang_screens": "Screens",
     "lang_serialNo": "Serial no",
     "lang_showList": "List",
