--- a/modules-available/statistics/lang/en/messages.json
+++ b/modules-available/statistics/lang/en/messages.json
@@ -1,7 +1,11 @@
 {
     "deleted-n-machines": "Deleted {{0}} clients",
+    "ignored-both-in-use": "Ignoring machine pair as both still seem to be in use. ({{0}} and {{1}})",
     "invalid-filter-argument": "{{1}} is not a vald argument for filter {{0}}",
     "invalid-filter-key": "{{0}} is not a valid filter",
+    "invalid-replace-format": "Invalid parameter format ({{0}})",
+    "no-replacement-matches": "No machines match the criteria from above",
     "notes-saved": "Notes have been saved",
-    "unknown-machine": "Unknown machine uuid {{0}}"
+    "unknown-machine": "Unknown machine uuid {{0}}",
+    "x-machines-replaced": "{{0}} machine(s) replaced"
 }
